[B]Version 1.1.14[/B]
xvideos: added 'related videos' to context menu
cam4: fixed