@@ -1,3 +1,4 @@
 [B]Version 1.1.14[/B]
 xvideos: added 'related videos' to context menu
 cam4: fixed
+xvideos: added filters for categories, tags and search
